updated pixel size and image selection

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "update-images": "node update-images.js"
+    "update-images": "node update-images.js",
+    "watch-images": "node watch-images.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
